--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -52,6 +52,13 @@ a:link
   margin: 0;
 }
 
+.privacy
+{
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #codeError
 {
   display: none;
